2012-12-06  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: revert DOS newlines
        * src/Attributes.cpp: revert DOS newlines; define RCPP_NO_SUGAR
        * src/AttributesGen.cpp: revert DOS newlines
        * src/AttributesParser.cpp: revert DOS newlines; define RCPP_NO_SUGAR
        * include/Rcpp/iostream/Rstreambuf.h: revert DOS newlines
  
2012-12-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/exceptions.cpp: Added include of cstdlib to compile 

2012-12-06 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/api/meat/Environment.h: meat for Environment
        * src/exceptions.cpp: include config so that it knows that Rcpp can 
        demangle
        * unitTests/runit.environments.R: using sourceCpp
        * src/Environment.cpp: less includes
        * src/Evaluator.cpp: less includes

2012-12-05 Romain Francois <romain@r-enthusiasts.com>

        * src/cache.cpp: added get_cache
        * include/Rcpp/hash/IndexHash.h: use a cached integer vector for
        the hash table payload. The cache vector increases as needed. 
        * include/Rcpp/iostream/Rostream.h: make Rostream a template
        * include/Rcpp/iostream/Rstreambuf.h: make Rstreambuf a template
        * src/AttributesGen.cpp : include exceptions.h which was included 
        implicitely by Rostream.h before
        * include/Rcpp/macros/debug.h : factor out the debugging macros
        * include/Rcpp/api/meat/RObject.h : only declare templates that use
        as and wrap. they are implemented later in the meat directory
        * include/Rcpp/api/meat/meat.h: directory containing implementations
        of templates using as and wrap
        * include/RcppCommon.h: removed unused test_named
        * src/RcppCommon.cpp: removed unused test_named
        * src/r_cast.cpp: less includes
        * src/posixt.cpp: less includes
        
2012-12-05  JJ Allaire <jj@rstudio.org>

        * src/Attributes.R: direct hookup of external ptr in sourceCpp