@@ -129,6 +129,8 @@ RCPP_EXCEPTION_CLASS(eval_error, message )
 
 void forward_uncaught_exceptions_to_r() ;
 void forward_exception_to_r( const std::exception& ) ;
+SEXP exception_to_try_error( const std::exception& ) ;
+SEXP string_to_try_error( const std::string& ) ;
 
 std::string demangle( const std::string& name) ;
 #define DEMANGLE(__TYPE__) demangle( typeid(__TYPE__).name() ).c_str() 
